@@ -2940,19 +2940,6 @@ do it.
 Removes any support for resource checking.
 </dd>
 <p></p>
-<dt><strong><a name="item__2d_2denable_2dxgetdefault">--enable-xgetdefault</a></strong><br />
-</dt>
-<dd>
-Make resources checking via <code>XGetDefault()</code> instead of our small
-version which only checks ~/.Xdefaults, or if that doesn't exist then
-~/.Xresources.
-</dd>
-<dd>
-<p>Please note that nowadays, things like XIM will automatically pull in and
-use the full X resource manager, so the overhead of using it might be very
-small, if nonexistant.</p>
-</dd>
-<p></p>
 <dt><strong><a name="item_strings">--enable-strings (default: off)</a></strong><br />
 </dt>
 <dd>
